apps/trace-demo/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trace-demo
spec:
  selector:
    app: trace-demo
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
