apps/trace-demo/kustomize/base/ingress.yaml
# manifests/trace-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trace-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    external-dns.alpha.kubernetes.io/hostname: "trace-demo.fullstack.pw"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - "trace-demo.fullstack.pw"
    secretName: trace-demo-tls
  rules:
  - host: "trace-demo.fullstack.pw"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trace-demo
            port:
              number: 80
